courses/430_programming-languages/assignment-8/tests/error/error49.nex
yesle a > b { raspetchatat 1; } yesho { raspetchatat 2; }
